force-app/main/default/objects/Data_Quality_Config__c/Data_Quality_Config__c.object-meta.xml
<CustomObject>
    <description>Configuration for Data Quality Accelerator per object.</description>
    <label>Data Quality Config</label>
    <nameField>
        <displayFormat>DQC-{0000}</displayFormat>
        <label>Config ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Quality Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>