force-app/main/default/objects/Data_Quality_Config__c/fields/Max_Fields__c.field-meta.xml
<CustomField>
    <fullName>Max_Fields__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Maximum number of fields allowed in this configuration.</description>
    <label>Max Fields</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>