force-app/main/default/objects/Data_Quality_Config__c/fields/Object_Label__c.field-meta.xml
<CustomField>
    <fullName>Object_Label__c</fullName>
    <description>Label of the Salesforce Object.</description>
    <label>Object Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>